<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="empty_string" translatable="false"></string>
    <string name="dash_string" translatable="false">-</string>
    <string name="activator_string" translatable="false">activator</string>
    <string name="app_name">PhoneProfilesPlus</string>
    <string name="menu_edit_profiles">Editor</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_phone_profiles">PhoneProfilesPlus</string>
    <string name="title_activity_profile_preferences">Profile preferences</string>
    <string name="title_activity_event_preferences">Event preferences</string>
    <string name="menu_new_profile">New profile</string>
    <string name="menu_delete_all_profiles">Delete all profiles</string>
    <string name="menu_new_event">New event</string>
    <string name="menu_delete_all_events">Delete all events</string>
    <string name="profiles_header_profile_name_no_activated">No profile activated</string>
    <string name="profile_name_default">Profile</string>
    <string name="event_name_default">Event</string>
    <string name="profile_context_item_edit">Edit</string>
    <string name="profile_context_item_delete">Delete</string>
    <string name="profile_string_0">Profile</string>
    <string name="event_string_0">Event</string>
    <string name="delete_profile_alert_message">Delete profile?</string>
    <string name="event_preferences_category_eventIdentification">Event identification</string>
    <string name="event_preferences_eventEnabled">Enable run</string>
    <string name="event_preferences_eventName">Event name</string>
    <string name="event_preferences_eventProfileStart">Activate profile</string>
    <string name="event_preferences_category_eventTimeParameters">Time sensor</string>
    <string name="event_preferences_category_eventBatteryParameters">Battery sensor</string>
    <string name="event_preferences_category_eventCallParameters">Call sensor</string>
    <string name="event_preferences_eventProfileEnd">Activate profile</string>
    <string name="event_preferences_ForceRun">Ignore manual activation</string>
    <string name="event_preferences_ForceRun_summary">Start the event even when there is a manually activated profile</string>
    <string name="event_preferences_category_startOfEvent">Start of event</string>
    <string name="event_preferences_category_endOfEvent">End of event</string>
    <string name="event_preferences_priority">Priority</string>
    <string name="array_event_pref_priorityMedium">[P:5] Medium</string>
    <string name="event_preferences_category_eventPeripheralParameters">Accessories sensor</string>
    <string name="event_preferences_category_eventCalendarParameters">Calendar sensor</string>
    <string name="event_preferences_category_eventWifiParameters">Wi-Fi sensor</string>
    <string name="event_preferences_wifi_ssid">SSID</string>
    <string name="array_event_pref_wifiConnectionType_connected">Connected</string>
    <string name="event_preferences_wifi_connection_type">Connection type</string>
    <string name="event_preferences_category_eventScreenParameters">Screen sensor</string>
    <string name="profile_preferences_duration">Duration</string>
    <string name="profile_preferences_afterDurationDo">When duration expires</string>
    <string name="array_pref_afterProfileDurationDo_nothing">Do nothing</string>
    <string name="event_preferences_category_eventBluetoothParameters">Bluetooth sensor</string>
    <string name="event_preferences_category_eventSMSParameters">SMS/MMS sensor</string>
    <string name="event_preferences_atEndDo">More actions</string>
    <string name="array_pref_atEndDo_restartEvents">Restart events</string>
    <string name="event_preferences_category_eventNotificationsParameters">Notification sensor</string>
    <string name="phone_profiles_pref_category_wifi_scanning">Wi-Fi scanning</string>
    <string name="profile_preferences_category_activation_duration">Activation duration</string>
    <string name="event_preferences_category_startOfEventOthers">Other parameters</string>
    <string name="event_preferences_category_eventApplicationsParameters">Application sensor</string>
    <string name="event_preferences_applications_applications">Applications</string>
    <string name="event_preferences_applications_AccessibilitySettings_title">Accessibility settings</string>
    <string name="event_preferences_category_eventLocationsParameters">Location sensor</string>
    <string name="phone_profiles_pref_eventLocationSystemSettings">Location system settings</string>
    <string name="event_preferences_category_sensors">Sensor parameters</string>
    <string name="profile_preferences_askForDuration">Ask for Duration</string>
    <string name="event_preferences_category_eventOrientationParameters">Orientation sensor</string>
    <string name="phone_profiles_pref_eventWifiAppSettings_summary">Setup Wi-Fi scanning parameters in application settings.</string>
    <string name="event_preferences_category_eventMobileCellsParameters">Mobile cell sensor</string>
    <string name="event_preferences_category_eventNFCParameters">NFC sensor</string>
    <string name="event_preferences_sensorsInfo_title">Sensor functionality</string>
    <string name="event_preferences_sensorsInfo_summary">Event will start only when all \"Enable sensor\" checked sensor parameters are fulfilled. Running event will end if some checked sensor parameters are not fulfilled. Check only those sensors you need for this event. Checked sensor name is marked with bold text.\n\nSome sensor parameters are needed. Needed parameter names are marked with underlined text. If some needed parameters are not configured, event will not start, and parameter \"Enable sensor\" will be unchecked.</string>
    <string name="event_preferences_enable_sensor">Enable sensor</string>
    <string name="info_preference_click_here">Click here to show information</string>
    <string name="phone_profiles_pref_eventUsePriorityAppSettings">Use priority</string>
    <string name="phone_profiles_pref_eventUsePriorityAppSettings_summary">Enable usage of parameter \"Priority\" in application settings.</string>
    <string name="event_preference_sensor_time_summary">This sensor will start an event by time. Parameters: Start time, End time, Days of week.</string>
    <string name="event_preference_sensor_calendar_summary">This sensor will start an event by calendar event. Parameters: Calendars, Search field (Event name, Description, etc.), Search string, Ignore \"All day\" events, Availability (Busy, Free, etc.).</string>
    <string name="event_preference_sensor_battery_summary">This sensor will start an event by battery level. Parameters: Low level, Upper level, Charging, Power save mode.</string>
    <string name="event_preference_sensor_call_summary">This sensor will start an event by calling contacts. Parameters: Call event (Ringing, Outgoing call started, etc.), Contact groups, Contacts, Contact list type (white/black list).</string>
    <string name="event_preference_sensor_sms_summary">This sensor will start an event by received SMS/MMS from contacts. Parameters: Contact groups, Contacts, Contact list type (white/black list), Permanent run, Duration (event run duration).</string>
    <string name="event_preference_sensor_location_summary">This sensor will start an event by device location. Parameters: Location, Start when outside location.</string>
    <string name="event_preference_sensor_wifi_summary">This sensor will start an event by Wi-Fi SSID. Parameters: Connection Type (Nearby, Connected, etc.), SSID.</string>
    <string name="event_preference_sensor_bluetooth_summary">This sensor will start an event by Bluetooth name. Parameters: Connection Type (Nearby, Connected, etc.), Scanned device type (Classic, Low energy, etc.), Bluetooth name.</string>
    <string name="event_preference_sensor_mobile_cells_summary">This sensor will start an event by connected mobile cells (towers). Parameters: Cells, Start when outside cells.</string>
    <string name="event_preference_sensor_accessories_summary">This sensor will start an event by connected accessory (car dock, hands-free, headphones, etc.). Parameters: Accessories type.</string>
    <string name="event_preference_sensor_screen_summary">This sensor will start an event by screen on/off. Parameters: Event type (screen on, screen off, etc.), End when unlocked (event ends when device unlocked).</string>
    <string name="event_preference_sensor_notification_summary">This sensor will start an event by notification from applications. Parameters: Applications, End when dismissed (end of event at notification dismissal), Permanent run, Duration (event run duration).</string>
    <string name="event_preference_sensor_application_summary">This sensor will start an event by application in foreground. Parameters: Applications.</string>
    <string name="event_preference_sensor_orientation_summary">This sensor will start an event by device orientation. Parameters: Display (Up, down), Sides (Horizontal, side up), Distance (Near, far; used is proximity sensor), Ignore for applications (in foreground).</string>
    <string name="event_preference_sensor_nfc_summary">This sensor will start an event by NFC tags. Parameters: NFC tags, Permanent run, Duration (event run duration).</string>
    <string name="event_preferences_category_eventRadioSwitchParameters">Radio sensor</string>
    <string name="event_preference_sensor_radioSwitch_summary">This sensor will start an event by switching radios (on/off). Parameters: Wi-Fi, Bluetooth, Mobile data, GPS, NFC, Airplane mode.</string>
    <string name="ringtone_preference_not_set">Not set</string>
    <string name="event_preferences_noPauseByManualActivation">Do not pause during manual activation</string>
    <string name="event_preferences_noPauseByManualActivation_summary">Do not pause this running event if a profile is manually activated</string>
    <string name="event_preferences_applications_AccessibilitySettingsForExtender_summary">To enable \"Applications\" parameter, allow PhoneProfilesPlusExtender \"Accessibility\" in system settings.</string>
    <string name="event_preferences_applications_PPPExtender_install_summary">To enable \"Applications\" parameter, click here to install PhoneProfilesPlusExtender.</string>
    <string name="profile_preferences_durationNotificationSound">Duration end: Notification sound</string>
    <string name="profile_preferences_durationNotificationVibrate">Duration end: Notify by vibration</string>
    <string name="preferences_durationNotificationSoundInfo_summary">This notification uses the media channel. Therefore it uses the media volume.</string>
    <string name="phone_profiles_pref_eventWiFiLocationSystemSettings_summary">Please enable Location and Wi-Fi scanning in System Settings. Without this, Wi-fi scanning will not work.</string>
    <string name="phone_profiles_pref_eventWiFiKeepOnSystemSettings">\"Keep Wi-Fi on\" system setting</string>
    <string name="phone_profiles_pref_eventWiFiKeepOnSystemSettings_summary">Please configure \"Keep Wi-Fi on during sleep\" to \"Always\". Without this, Wi-Fi scanning will not work during device sleep.</string>
    <string name="event_preferences_PPPExtenderInstallInfo_text">How to install PhoneProfilesPlusExtender</string>
    <string name="event_preferences_PPPExtenderInstallInfo_summary">Download latest version of PhoneProfilesPlusExtender.apk from it\'s GitHub. Then click to notification about downloaded apk and install it.</string>
    <string name="event_preference_sensor_alarm_clock_summary">This sensor will start an event by alarm clock. Parameters: Permanent run, Duration (event run duration).</string>
    <string name="event_preferences_category_eventAlarmClockParameters">Alarm clock sensor</string>
    <string name="extender_app_name">PhoneProfilesPlusExtender</string>
</resources>