<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="eventWifiCategory"
    app:title="@string/event_preferences_category_eventWifiParameters" >

    <SwitchPreferenceCompat
        app:key="eventWiFiEnabled"
        app:title="@string/event_preferences_enable_sensor"
        app:defaultValue="false"
        app:iconSpaceReserved="false" />
    <Preference
        app:key="eventEnableWiFiScanningAppSettings"
        app:title="@string/phone_profiles_pref_category_wifi_scanning"
        app:summary="@string/phone_profiles_pref_eventWifiAppSettings_summary"
        app:dependency="eventWiFiEnabled"
        app:widgetLayout="@layout/start_activity_preference"
        app:iconSpaceReserved="false" />
    <Preference
        app:key="eventWiFiLocationSystemSettings"
        app:title="@string/phone_profiles_pref_eventLocationSystemSettings"
        app:summary="@string/phone_profiles_pref_eventWiFiLocationSystemSettings_summary"
        app:widgetLayout="@layout/start_activity_preference"
        app:dependency="eventWiFiEnabled"
        app:iconSpaceReserved="false" />
    <Preference
        app:key="eventWiFiKeepOnSystemSettings"
        app:title="@string/phone_profiles_pref_eventWiFiKeepOnSystemSettings"
        app:summary="@string/phone_profiles_pref_eventWiFiKeepOnSystemSettings_summary"
        app:widgetLayout="@layout/start_activity_preference"
        app:dependency="eventWiFiEnabled"
        app:iconSpaceReserved="false" />
    <ListPreference
        app:title="@string/event_preferences_wifi_connection_type"
        app:summary="@string/array_event_pref_wifiConnectionType_connected"
        app:key="eventWiFiConnectionType"
        app:defaultValue="1"
        app:entries="@array/eventWifiConnectionTypeArray"
        app:entryValues="@array/eventWifiConnectionTypeValues"
        app:dependency="eventWiFiEnabled"
        app:iconSpaceReserved="false" />
    <sk.henrichg.phoneprofilesplus.WifiSSIDPreferenceX
        app:key="eventWiFiSSID"
        app:summary="@string/event_preferences_wifi_ssid"
        app:title="@string/event_preferences_wifi_ssid"
        app:dependency="eventWiFiEnabled"
        app:iconSpaceReserved="false" />

</androidx.preference.PreferenceScreen>