<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/profile_preferences_category_activation_duration"
    app:key="prf_pref_activationDurationCategory" >

    <sk.henrichg.phoneprofilesplus.DurationDialogPreferenceX
        app:key="prf_pref_duration"
        app:summary="@string/profile_preferences_duration"
        app:title="@string/profile_preferences_duration"
        app:defaultValue="0"
        app:iconSpaceReserved="false"
        app:dMin="0"
        app:dMax="86400"
        app:dependency="prf_pref_askForDuration" />
    <ListPreference
        app:title="@string/profile_preferences_afterDurationDo"
        app:summary="@string/array_pref_afterProfileDurationDo_nothing"
        app:key="prf_pref_afterDurationDo"
        app:defaultValue="0"
        app:entries="@array/afterProfileDurationDoArray"
        app:entryValues="@array/afterProfileDurationDoValues"
        app:dependency="prf_pref_askForDuration"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="prf_pref_askForDuration"
        app:title="@string/profile_preferences_askForDuration"
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:disableDependentsState="true"/>
    <Preference
        app:key="prf_pref_durationNotificationSoundInfo"
        app:title="@string/profile_preferences_durationNotificationSound"
        app:summary="@string/preferences_durationNotificationSoundInfo_summary"
        app:iconSpaceReserved="false"
        app:widgetLayout="@layout/info_preference" />
    <sk.henrichg.phoneprofilesplus.RingtonePreferenceX
        app:key="prf_pref_durationNotificationSound"
        app:summary="@string/ringtone_preference_not_set"
        app:title="@string/profile_preferences_durationNotificationSound"
        app:iconSpaceReserved="false"
        app:ringtoneType="notification"
        app:showSilent="true"
        app:showDefault="true" />
    <SwitchPreferenceCompat
        app:key="prf_pref_durationNotificationVibrate"
        app:title="@string/profile_preferences_durationNotificationVibrate"
        app:defaultValue="false"
        app:iconSpaceReserved="false"/>
    
</androidx.preference.PreferenceScreen>